员工信息管理系统 使用JavaFX技术开发，数据存储在项目的txt文件中